@@ -4,11 +4,12 @@ import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
 public class DDLootGen {
     public static LootTableProvider create(PackOutput output) {
-        return new LootTableProvider(output, Set.of(), List.of(new LootTableProvider.SubProviderEntry(DDBlockLootGen::new, LootContextParamSets.BLOCK)));
+        return new LootTableProvider(output, Collections.emptySet(),
+                List.of(new LootTableProvider.SubProviderEntry(DDBlockLootGen::new, LootContextParamSets.BLOCK)));
     }
 }
